Add Navbar with a container for logo and ul links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>The O.P Project</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+    <div class="container">
+        <div class="logo">The O.P Project</div>
+        <ul class="nav">
+       <li><a href="*">Header Link one</a></li>
+       <li><a href="*">Header Link two</a></li>
+       <li><a href="*">Header Link three</a></li>
+        </ul>
+    </div>
+
+
+
+    </nav>
+
+
+
+
+
 </body>
 </html>
