Add container for Main tittle and text with single button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-    <div class="container">
+    <div class="container1">
         <div class="logo">The O.P Project</div>
         <ul class="nav">
        <li><a href="*">Header Link one</a></li>
@@ -17,7 +17,17 @@
        <li><a href="*">Header Link three</a></li>
         </ul>
     </div>
+        <div class="container2">
+            <div class="text">Website is awesome</div>
+            <p>
+                This website has some subtext that goes here uinder the tittle. will be smaller
+                and the color will be in lower contrast.
+            </p>
+         <button>Sign up</button>
 
+
+
+        </div>
 
 
     </nav>
