--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
         <div class="container2">
-            <div class="text">Website is awesome</div>
+            <h1>Website is awesome</h1>
             <p>
                 This website has some subtext that goes here uinder the tittle. will be smaller
                 and the color will be in lower contrast.
