Add image with alt text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             </p>
          <button>Sign up</button>
 
+         <img src="pexels-photo-7237616.jpeg" alt="Red vespa bike">
+
 
 
         </div>
