Add container number 3 and with it; Add classes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,29 @@
                 and the color will be in lower contrast.
             </p>
          <button>Sign up</button>
-
+        
          <img src="pexels-photo-7237616.jpeg" alt="Red vespa bike">
         </div>
 
+    <div class="container3">
+      <h2>Some random information</h2>
+      <div class="info">
+          <img src="" alt="A leather type">
+          <div class="text">the leather type</div>
+      </div>    
+      <div class="info">
+        <img src="" alt="A leather type">
+        <div class="text">the leather type</div>
+      </div>    
+    <div class="info">
+        <img src="" alt="A leather type">
+        <div class="text">the leather type</div>
+      </div>    
+    <div class="info">
+        <img src="" alt="A leather type">
+        <div class="text">the leather type</div>
+      </div>    
+    </div>
  
     
 
