Move div to properly close the container

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 and the color will be in lower contrast.
             </p>
          <button>Sign up</button>
-        
+        </div>
          <img src="pexels-photo-7237616.jpeg" alt="Red vespa bike">
         </div>
 
