--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
         <div class="text">the leather type</div>
       </div>    
     </div>
- 
+
+    <div class="container4">
+        <div class="text"> whatever the text it is for now plus <strong>author</strong></div>
+    </div>
     
 
 
