--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         <div class="box">call to action</div>
         <button>Sign up</button>
     </div>
-    
+
+    <div class="footer">
+        <h4>Copyright</h4>
+    </div>
     
 
 
