Add a header class onto container2

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </ul>
         </div>
     </nav>
+       <header class="header">
         <div class="container2">
             <h1>Website is awesome</h1>
             <h2>
