--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
     </nav>
        <header class="header">
         <div class="container2">
+            <div>
             <h1>Website is awesome</h1>
             <h2>
                 This website has some subtext that goes here uinder the tittle. will be smaller
                 and the color will be in lower contrast.
             </h2>
-         <button>Sign up</button>
-        </div>
+            <button>Sign up</button>
+            </div>
+     
+        <div>
          <img src="pexels-photo-7237616.jpeg" alt="Red vespa bike">
         </div>
-
+       </header>
+       
     <div class="container3">
       <h2>Some random information</h2>
       <div class="info">
