Add images from directory

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     <div class="container3">
       <h2>Some random information</h2>
       <div class="info">
-          <img src="" alt="A leather type">
+          <img src="red-leather.jpg" alt="A leather type">
           <div class="text">the leather type</div>
       </div>    
       <div class="info">
-        <img src="" alt="A leather type">
+        <img src="dark-blue-leather.jpg" alt="A leather type">
         <div class="text">the leather type</div>
       </div>    
     <div class="info">
-        <img src="" alt="A leather type">
+        <img src="light-brown-leather.jpg" alt="A leather type">
         <div class="text">the leather type</div>
       </div>    
     <div class="info">
-        <img src="" alt="A leather type">
+        <img src="dark-green-leather.jpg" alt="A leather type">
         <div class="text">the leather type</div>
       </div>    
     </div>
