Erase h2 from container3, move above and give new class

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         </div>
        </header>
        
+     <div class="subtitle">Some random information</div>
+
     <div class="container3">
-      <h2>Some random information</h2>
-      <div class="info">
+      <div class="item">
           <img src="red-leather.jpg" alt="A leather type">
           <div class="text">the leather type</div>
       </div>    
