Fix wrong name on class of container3

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      <div class="subtitle">Some random information</div>
 
     <div class="container3">
-      <div class="item">
+      <div class="info">
           <img src="red-leather.jpg" alt="A leather type">
           <div class="text">the leather type</div>
       </div>    
