Remove numbers on containers and assing grandparents

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-    <div class="container1">
+    <div class="container">
         <div class="logo">The O.P Project</div>
         <ul class="nav">
        <li><a href="*">Header Link one</a></li>
@@ -19,7 +19,7 @@
         </div>
     </nav>
        <header class="header">
-        <div class="container2">
+        <div class="container">
             <div>
             <h1>Website is awesome</h1>
             <h2>
@@ -36,7 +36,8 @@
        
      <div class="subtitle">Some random information</div>
 
-    <div class="container3">
+     <main class="main">
+    <div class="container">
       <div class="info">
           <img src="red-leather.jpg" alt="A leather type">
           <div class="text">the leather type</div>
@@ -53,15 +54,20 @@
         <img src="dark-green-leather.jpg" alt="A leather type">
         <div class="text">the leather type</div>
       </div>    
+    </main>
     </div>
 
-    <div class="container4">
+    <div class="texto">
+    <div class="container">
         <div class="text"> whatever the text it is for now plus <strong>author</strong></div>
     </div>
+    </div>
 
-    <div class="container5">
+    <div class="boxes">
+    <div class="container">
         <div class="box">call to action</div>
         <button>Sign up</button>
+    </div>
     </div>
 
     <div class="footer">
