Modify text on navbar links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container">
         <div class="logo">The O.P Project</div>
         <ul class="nav">
-       <li><a href="*">Header Link one</a></li>
-       <li><a href="*">Header Link two</a></li>
-       <li><a href="*">Header Link three</a></li>
+       <li><a href="*">The Company</a></li>
+       <li><a href="*">The Shop</a></li>
+       <li><a href="*">Contact Us</a></li>
         </ul>
         </div>
     </nav>
