Change text on header's button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 This website has some subtext that goes here uinder the tittle. will be smaller
                 and the color will be in lower contrast.
             </h2>
-            <button>Sign up</button>
+            <button>Shop Now</button>
             </div>
      
         <div>
