Change all text from header -h1-h2-

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
        <header class="header">
         <div class="container">
             <div>
-            <h1>Website is awesome</h1>
+            <h1>The New Vespa Vxl-150</h1>
             <h2>
-                This website has some subtext that goes here uinder the tittle. will be smaller
-                and the color will be in lower contrast.
+                It is the most accessible version of the Vespa range, combining quality, functionality, and the unmistakable style that makes it unique.
             </h2>
             <button>Shop Now</button>
             </div>
