Change subtitle text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
        </header>
        
-     <div class="subtitle">Some random information</div>
+     <div class="subtitle">Choose the Leather for your Seat</div>
 
      <main class="main">
     <div class="container">
