--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
     <div class="container">
       <div class="info">
           <img src="red-leather.jpg" alt="A leather type">
-          <div class="text">the leather type</div>
+          <div class="text">Bright Cracked Red </div>
       </div>    
       <div class="info">
         <img src="dark-blue-leather.jpg" alt="A leather type">
-        <div class="text">the leather type</div>
+        <div class="text">Soft Dark Blue</div>
       </div>    
     <div class="info">
         <img src="light-brown-leather.jpg" alt="A leather type">
-        <div class="text">the leather type</div>
+        <div class="text">Light Cracked Brown</div>
       </div>    
     <div class="info">
         <img src="dark-green-leather.jpg" alt="A leather type">
-        <div class="text">the leather type</div>
+        <div class="text">Deep Cracked Green</div>
       </div>    
     </main>
     </div>
