Change review text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="texto">
     <div class="container">
-        <div class="text"> whatever the text it is for now plus <strong>author</strong></div>
+        <div class="text"> I have been using vespa from around 5 years . I bought it in July'16 and my experience till date is great. <strong>author</strong></div>
     </div>
     </div>
 
