Change text on three last containers

--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
 
     <div class="texto">
     <div class="container">
-        <div class="text"> I have been using vespa from around 5 years . I bought it in July'16 and my experience till date is great. <strong>author</strong></div>
+        <div class="text"> I have been driving my Vespa for around 5 years. I bought it in July'16 and my experience till date is great. <strong>Fabio Romero</strong></div>
     </div>
     </div>
 
     <div class="boxes">
     <div class="container">
-        <div class="box">call to action</div>
+        <div class="box">Subscribe Now to our Newsletter and get a 30% Discount on Vespa Accessories </div>
         <button>Sign up</button>
     </div>
     </div>
 
     <div class="footer">
-        <h4>Copyright</h4>
+        <h4>Copyright© 2022 </h4>
     </div>
     
 
