Fix typo line 67

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <div class="boxes">
     <div class="container">
-        <div class="box">Subscribe Now to our Newsletter and get a 30% Discount on Vespa Accessories </div>
+        <div class="box">Subscribe Now to our Newsletter and get a 30% Discount on Vespa Accessories.</div>
         <button>Sign up</button>
     </div>
     </div>
