Add hyphen before Authors name

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="texto">
     <div class="container">
-        <div class="text"> I have been driving my Vespa for around 5 years. I bought it in July'16 and my experience till date is great. <strong>Fabio Romero</strong></div>
+        <div class="text"> I have been driving my Vespa for around 5 years. I bought it in July'16 and my experience till date is great. <strong>-Fabio Romero</strong></div>
     </div>
     </div>
 
