Modify text on footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="footer">
-        <h4>Copyright© 2022 </h4>
+        <h4>Copyright© - Emanuel Iturres - 2022 </h4>
     </div>
     
 
