--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
      
         <div>
-         <img src="pexels-photo-7237616.jpeg" alt="Red vespa bike">
+         <img src="images/pexels-photo-7237616.jpeg" alt="Red vespa bike">
         </div>
        </header>
        
@@ -38,19 +38,19 @@
      <main class="main">
     <div class="container">
       <div class="info">
-          <img src="red-leather.jpg" alt="A leather type">
+          <img src="images/red-leather.jpg" alt="A leather type">
           <div class="text">Bright Cracked Red </div>
       </div>    
       <div class="info">
-        <img src="dark-blue-leather.jpg" alt="A leather type">
+        <img src="images/dark-blue-leather.jpg" alt="A leather type">
         <div class="text">Soft Dark Blue</div>
       </div>    
     <div class="info">
-        <img src="light-brown-leather.jpg" alt="A leather type">
+        <img src="images/light-brown-leather.jpg" alt="A leather type">
         <div class="text">Light Cracked Brown</div>
       </div>    
     <div class="info">
-        <img src="dark-green-leather.jpg" alt="A leather type">
+        <img src="images/dark-green-leather.jpg" alt="A leather type">
         <div class="text">Deep Cracked Green</div>
       </div>    
     </main>
