--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up for free!</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">The O.P Project</div>
+        <ul class="nav">
+          <li><a href="*">Home page</a></li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
