Add header and container

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -15,5 +15,10 @@
         </ul>
       </div>
     </nav>
+    <header class="header">
+        <div class="container">
+           
+        </div>
+       </header>
   </body>
 </html>
