Add footer to webpage

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -20,5 +20,8 @@
            
         </div>
        </header>
+       <div class="footer">
+        <h4>Copyright© - Emanuel Iturres - 2022 </h4>
+    </div>
   </body>
 </html>
