Add form element inside header

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -16,12 +16,21 @@
       </div>
     </nav>
     <header class="header">
-        <div class="container">
-           
-        </div>
-       </header>
-       <div class="footer">
-        <h4>Copyright© - Emanuel Iturres - 2022 </h4>
+      <div class="container">
+           <form>
+               <input type="text" name="userName" placeholder="User Name">
+               <p></p>
+               <input type="text" name="email" placeholder="Email">
+               <p></p>
+               <input type="text" name="password" placeholder="Password">
+               <p></p>
+               <input type="text" name="Age" placeholder="Age">
+               <p></p>
+           </form>
+      </div>
+    </header>
+    <div class="footer">
+      <h4>Copyright© - Emanuel Iturres - 2022</h4>
     </div>
   </body>
 </html>
