Add 'ok' button to end form

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -26,6 +26,7 @@
                <p></p>
                <input type="text" name="Age" placeholder="Age">
                <p></p>
+               <button>OK</button>
            </form>
       </div>
     </header>
