Add h1 before header

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -16,6 +16,7 @@
         </ul>
       </div>
     </nav>
+    <h1>Sign Up Now!</h1>
     <header class="header">
       <div class="container">
            <form>
