Enclose h1 with class of container

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up for free!</title>
-    <link rel="stylesheet" href="sign-up-style.css">
+    <link rel="stylesheet" href="sign-up-style.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -16,20 +16,22 @@
         </ul>
       </div>
     </nav>
+    <div class="container">
     <h1>Sign Up Now!</h1>
+    </div>
     <header class="header">
       <div class="container">
-           <form>
-               <input type="text" name="userName" placeholder="User Name">
-               <p></p>
-               <input type="text" name="email" placeholder="Email">
-               <p></p>
-               <input type="text" name="password" placeholder="Password">
-               <p></p>
-               <input type="text" name="Age" placeholder="Age">
-               <p></p>
-               <button>OK</button>
-           </form>
+        <form>
+          <input type="text" name="userName" placeholder="User Name" />
+          <p></p>
+          <input type="text" name="email" placeholder="Email" />
+          <p></p>
+          <input type="text" name="password" placeholder="Password" />
+          <p></p>
+          <input type="text" name="Age" placeholder="Age" />
+          <p></p>
+          <button>OK</button>
+        </form>
       </div>
     </header>
     <div class="footer">
