--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -16,7 +16,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
+    <div class="container-h1">
     <h1>Sign Up Now!</h1>
     </div>
     <header class="header">
