Add text to paragraph in form

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -23,13 +23,13 @@
       <div class="container">
         <form>
           <input type="text" name="userName" placeholder="User Name" />
-          <p></p>
+          <p>Username must be alphanumeric and contain 5 - 12 characters</p>
           <input type="text" name="email" placeholder="Email" />
-          <p></p>
+          <p>Email must be a valid address, e.g me@mydomain.com</p>
           <input type="text" name="password" placeholder="Password" />
-          <p></p>
+          <p>Password must contain alphanumeric (@_ and - are also allowed) and be 8 - 20 characters</p>
           <input type="text" name="Age" placeholder="Age" />
-          <p></p>
+          <p>You must be +18</p>
           <button>OK</button>
         </form>
       </div>
