Enclose ok button in div class

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -30,8 +30,10 @@
           <p>Password must contain alphanumeric (@_ and - are also allowed) and be 8 - 20 characters</p>
           <input type="text" name="Age" placeholder="Age" />
           <p>You must be +18</p>
-          <button>OK</button>
         </form>
+      </div>
+      <div class="signUpButton-ok">
+      <button>OK</button>
       </div>
     </header>
     <div class="footer">
