Fix typo: lowercase the value on name

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -28,7 +28,7 @@
           <p>Email must be a valid address, e.g me@mydomain.com</p>
           <input type="text" name="password" placeholder="Password" />
           <p>Password must contain alphanumeric (@_ and - are also allowed) and be 8 - 20 characters</p>
-          <input type="text" name="Age" placeholder="Age" />
+          <input type="text" name="age" placeholder="Age" />
           <p>You must be +18</p>
         </form>
       </div>
@@ -39,5 +39,6 @@
     <div class="footer">
       <h4>Copyright© - Emanuel Iturres - 2022</h4>
     </div>
+    <script type="text/javascript" src="signup-validation.js"></script>
   </body>
 </html>
