Link html form to index.html for button

--- a/index.html
+++ b/index.html
@@ -65,18 +65,12 @@
     <div class="boxes">
     <div class="container">
         <div class="box">Subscribe Now to our Newsletter and get a 30% Discount on Vespa Accessories.</div>
-        <button>Sign up</button>
+        <a href="/sign-up-form.html"><button>Sign up</button></a>
     </div>
     </div>
 
     <div class="footer">
         <h4>Copyright© - Emanuel Iturres - 2022 </h4>
     </div>
-    
-
-
-
-
-
 </body>
 </html>
