Link index.html to sign-up-form.html for nav homepage

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="logo">The O.P Project</div>
         <ul class="nav">
-          <li><a href="*">Home page</a></li>
+          <li><a href="/index.html">Home page</a></li>
         </ul>
       </div>
     </nav>
