Remove slash (/) where link begins

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="boxes">
     <div class="container">
         <div class="box">Subscribe Now to our Newsletter and get a 30% Discount on Vespa Accessories.</div>
-        <a href="/sign-up-form.html"><button>Sign up</button></a>
+        <a href="sign-up-form.html"><button>Sign up</button></a>
     </div>
     </div>
 
