--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up for free!</title>
-    <link rel="stylesheet" href="sign-up-style.css" />
+    <link rel="stylesheet" href="/sign-up-style.css" />
+    <link rel="Home-page" href="/index.html" />
   </head>
   <body>
     <nav class="navbar">
@@ -39,6 +40,6 @@
     <div class="footer">
       <h4>Copyright© - Emanuel Iturres - 2022</h4>
     </div>
-    <script type="text/javascript" src="signup-validation.js"></script>
+    <script type="text/javascript" src="/signup-validation.js"></script>
   </body>
 </html>
