Change rel value

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up for free!</title>
     <link rel="stylesheet" href="/sign-up-style.css" />
-    <link rel="Home-page" href="/index.html" />
+    <link rel="next" href="/index.html" />
   </head>
   <body>
     <nav class="navbar">
