--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up for free!</title>
-    <link rel="stylesheet" href="/sign-up-style.css" />
-    <link rel="next" href="/index.html" />
+    <link rel="stylesheet" href="sign-up-style.css" />
+    <link rel="next" href="index.html" />
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
         <div class="logo">The O.P Project</div>
         <ul class="nav">
-          <li><a href="/index.html">Home page</a></li>
+          <li><a href="index.html">Home page</a></li>
         </ul>
       </div>
     </nav>
@@ -40,6 +40,6 @@
     <div class="footer">
       <h4>Copyright© - Emanuel Iturres - 2022</h4>
     </div>
-    <script type="text/javascript" src="/signup-validation.js"></script>
+    <script type="text/javascript" src="signup-validation.js"></script>
   </body>
 </html>
