--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
     <div class="container">
         <div class="logo">The O.P Project</div>
-        <ul class="nav">
+        <ul><!-- it used to have a class of nav -->
        <li><a href="*">The Company</a></li>
        <li><a href="*">The Shop</a></li>
        <li><a href="*">Contact Us</a></li>
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="info">
           <img src="images/red-leather.jpg" alt="A leather type">
-          <div class="text">Bright Cracked Red </div>
+          <div class="text">Bright Cracked Red</div>
       </div>    
       <div class="info">
         <img src="images/dark-blue-leather.jpg" alt="A leather type">
